# DesignReviewAutomation

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  design_reviewer.py  document_parser.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
design_review_automation/: __init__.py  design_reviewer.py  image_analyzer.py
docs/: activity_diagram.puml  class_diagram.puml  component_diagram.puml  sequence_diagram.puml
prompt_templates/: image_analysis_prompts.json  problem_statement_prompt.json
tests/: test_document_parser.py  test_image_analyzer.py
