[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "design-review-automation"
version = "0.1.0"
description = "A tool for automated technical design document review using OpenAI's GPT models"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Design Review Automation Team", email = "team@designreviewautomation.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["design-review", "openai", "gpt", "automation", "technical-documentation"]
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=0.19.0",
    "pydantic>=2.0.0",
    "python-docx>=0.8.11",
    "PyPDF2>=3.0.0",
    "markdown>=3.4.0",
    "python-magic>=0.4.27"
]

[project.urls]
Homepage = "https://github.com/yourusername/design-review-automation"
Repository = "https://github.com/yourusername/design-review-automation.git"
Issues = "https://github.com/yourusername/design-review-automation/issues"

[project.scripts]
design-review = "design_review_automation.design_reviewer:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=0.9.0",
    "pylint>=2.15.0",
    "coverage>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["design_review_automation"]
include = [
    "design_review_automation/**/*.py",
    "prompt_templates/**/*.json"
]

[tool.hatch.build.targets.sdist]
include = [
    "design_review_automation/**/*.py",
    "prompt_templates/**/*.json"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=. --cov-report=term-missing" 