[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "design-review-automation"
version = "0.1.0"
description = "A tool for automated technical design document review using OpenAI's GPT models"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Design Review Automation Team", email = "team@designreviewautomation.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
keywords = ["design review", "automation", "openai", "gpt", "technical documentation"]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.11",
    "markdown>=3.4.0",
    "Pillow>=10.0.0",
    "python-docx2txt>=0.8",
    "pdf2image>=1.16.3",
    "opencv-python>=4.8.0"
]

[project.urls]
Homepage = "https://github.com/hsinghb/DesignReviewAutomation"
Repository = "https://github.com/hsinghb/DesignReviewAutomation.git"
Issues = "https://github.com/hsinghb/DesignReviewAutomation/issues"

[project.scripts]
design-review = "design_review_automation.design_reviewer:main"

[tool.setuptools]
packages = ["design_review_automation"]
package-data = { design_review_automation = ["prompt_templates/*.json"] }

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=design_review_automation --cov-report=term-missing" 